--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>
-        Ola Dsmovie
-    </h1>
+   <header>
+       <nav class="container">
+           <h1>DSMovie</h1>
+           <a href="https://github.com/kortega90">/Kortega90</a>
+        </nav>
+   </header>
 </body>
 </html>
