--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <div>
+            <div class="dsmovie-contact-container">
                 <img src="img/Vector.svg" alt="Github">
                 <a href="https://github.com/kortega90">/Kortega90</a>
             </div>
         </nav>
     </header>
+    <main>
+        <section id="dsmovie-card-lis"class="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                <div class="dsmovie-card-desciption">
+                    <h3>The Witcher (2019)</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
