--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/xHrp2pq73oi9D64xigPjWW1wcz1.jpg" alt="The Batman (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>The Batman (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -89,9 +89,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/AdyJH8kDm8xT8IKTlgpEC15ny4u.jpg" alt="Doctor Strange in the Multiverse of Madness (2022)</">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Doctor Strange in the Multiverse of Madness (2022)</</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -112,9 +112,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg" alt="Spider-Man: No Way Home (2021)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Spider-Man: No Way Home (2021)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
