--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/AdyJH8kDm8xT8IKTlgpEC15ny4u.jpg" alt="Doctor Strange in the Multiverse of Madness (2022)</">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/AdyJH8kDm8xT8IKTlgpEC15ny4u.jpg" alt="Doctor Strange in the Multiverse of Madness (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>Doctor Strange in the Multiverse of Madness (2022)</</h3>
+                            <h3>Doctor Strange in the Multiverse of Madness (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -110,6 +110,7 @@
                         </div>
                    </div>
                 </div> 
+                
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg" alt="Spider-Man: No Way Home (2021)">
@@ -135,9 +136,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/hQjmd3m1z2pXqThJQhRcScPqbJw.jpg" alt="Fortress: Sniper's Eye (2022) ">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Fortress: Sniper's Eye (2022) </h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -158,9 +159,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/8wwXPG22aNMpPGuXnfm3galoxbI.jpg" alt="Sonic the Hedgehog 2 (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Sonic the Hedgehog 2 (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -181,9 +182,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/kLnqNE9Af5QHyvUxw8cDGhF1ilv.jpg" alt="The Eighth Clause (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>The Eighth Clause (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -204,9 +205,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/mZuGuu62O9ojVqK1NuR3cvSlVL8.jpg" alt="Emily in Paris (2020)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Emily in Paris (2020)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -227,9 +228,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/k66wW641A5Tok6OHMAsCbxM0UpG.jpg" alt="Sherlock (2010)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Sherlock (2010)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -250,9 +251,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aEGiJJP91HsKVTEPy1HhmN0wRLm.jpg" alt="Uncharted (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Uncharted (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -273,9 +274,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lRbDyjI7HEaXxflFQbYpqHRGFBJ.jpg" alt="Death on the Nile (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>Death on the Nile (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -296,9 +297,9 @@
                 </div> 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3"> 
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher (2019)">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/xicKILMzPn6XZYCOpWwaxlUzg6S.jpg" alt="All the Old Knives (2022)">
                         <div class="dsmovie-card-description">
-                            <h3>The Witcher (2019)</h3>
+                            <h3>All the Old Knives (2022)</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
